fix(console, login): Idp detail and create layout optimization, login - sub formfield link spacing (#3755)
* idp detail, create layout

* fat finger fix

--- a/console/src/app/modules/idp-create/idp-create.component.scss
+++ b/console/src/app/modules/idp-create/idp-create.component.scss
@@ -13,43 +13,71 @@
 .auto-reg-info {
   display: block;
   width: 100%;
+  max-width: 400px;
 
   .auto-reg-desc {
     margin: 0 0 1rem 0;
   }
 }
 
-.idp-content {
-  display: flex;
-  margin: 0 -0.5rem;
-  flex-wrap: wrap;
-
-  .desc {
-    flex-basis: 100%;
-    margin: 0 0.5rem;
-    margin-bottom: 1rem;
-  }
-
+.idp-create-content {
   .formfield {
-    flex: 1;
-    margin: 0 0.5rem;
+    display: block;
+    max-width: 400px;
+
+    .mat-chip-input {
+      width: 100%;
+      margin: 0;
+    }
+
+    .chip {
+      border-radius: 0.5rem;
+      height: 40px;
+    }
 
     @media only screen and (max-width: 450px) {
-      flex-basis: 100%;
+      max-width: none;
+    }
+  }
+
+  .idp-content {
+    .desc {
+      margin-bottom: 1rem;
+    }
+
+    .scope-card {
+      max-width: 400px;
+      display: block;
+
+      .idp-scopes {
+        .flex-line {
+          display: flex;
+          align-items: flex-start;
+
+          .formfield {
+            flex: 1;
+          }
+
+          .scope-add-button {
+            margin-top: 1.75rem;
+          }
+        }
+      }
     }
   }
 }
 
 .idp-create-actions {
   display: flex;
-  justify-content: space-between;
   margin-top: 1rem;
 
   button[mat-stroked-button] {
     border-radius: 0.5rem;
+    margin-right: 1rem;
   }
 
   button[mat-raised-button] {
     border-radius: 0.5rem;
+    margin-right: 1rem;
   }
 }
